--- a/dev/sass/_desktop.scss
+++ b/dev/sass/_desktop.scss
@@ -63,3 +63,11 @@
 .item:hover .item__caption {
 	bottom: -15px;
 }
+/* SHOWCASE SINGLE */
+.showcase-single__title {
+	font-size: 3.6em;
+}
+/* SINGLE POST */
+.single__title {
+	font-size: 3.6em;
+}
