--- a/dev/sass/_mobile.scss
+++ b/dev/sass/_mobile.scss
@@ -192,7 +192,7 @@ a {
 	color: $white;	
 }
 .single__title {
-	font-size: 3.6em;
+	font-size: 2em;
 	margin-bottom: 0.6rem;
 }
 .single__date {
@@ -231,11 +231,12 @@ a {
 	position: absolute;
 	top: 50%;
 	left: 50%;
+	width: 100%;
 	transform: translate(-50%, -50%);
 	color: $white;	
 }
 .showcase-single__title {
-	font-size: 3.6em;
+	font-size: 2em;
 	margin-bottom: 0.6rem;
 }
 .showcase-single__date {
